# alemedeiros.github.io

./: .gitignore  CNAME  LICENSE  about.html  about.md  alemedeiros.cabal  blog.html  contact.html  contact.md  deploy.sh  homepage.hs  index.html  index.md  stack.yaml  ta.md
css/: style.css
files/mc102/lab02/: cards.c
files/mc404/: armasm.vim
files/ta/2014s1-mc102/lab01/: media.c
files/ta/2014s1-mc102/lab03/: wave.c
posts/: 2013-04-17-mc404-2013s1-dicas-vim.md  2013-05-11-mc404-2013s1-tutorial-gdb.md  2014-03-15-mc102-2014s1-lab01.md  2014-03-21-mc102-2014s1-lab02.md  2014-03-29-mc102-2014s1-lab03.md  2014-06-10-go-intro.html  2014-06-10-go-intro.md  2016-05-01-redesign.html  2016-05-01-redesign.md
src/: Main.hs
ta/: 2012-08-01-mc202.md  2013-03-01-mc404.md  2014-03-01-mc102.md  mc102-2014s1.md  mc202-2012s2.md  mc404-2013s1.md
ta/2013s1-mc404/: 2013-04-17-dicas-vim.md  2013-05-11-tutorial-gdb.md
ta/2014s1-mc102/: 2014-03-15-lab01.md  2014-03-21-lab02.md  2014-03-29-lab03.md
tags/: english.html  golang.html  portuguese.html  redesign.html  tutorial.html
templates/: archive.html  base.html  content.html  default.html  full-card.html  post-card.html  post-list.html  ta.html
