-- alemedeiros.cabal
--  by alemedeiros <alexandre.n.medeiros _at_ gmail.com>
--
-- Cabal file for personal homepage project using hakyll

name:                alemedeiros
version:             0.2.0.0
synopsis:            Personal homepage of Alexandre Medeiros
description:         Personal homepage of Alexandre Medeiros
homepage:            http://alemedeiros.sdf.org/

license:             BSD3
license-file:        LICENSE

author:              Alexandre Medeiros
maintainer:          alexandre.n.medeiros@gmail.com

category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable homepage
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
